src/snapshots/zeek_language_server__ast__test__resolve-7.snap
---
source: src/ast.rs
expression: "db.resolve(NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: None,
        id: "f1",
        fqid: "x::X::f1",
        kind: Field(
            [
                "&optional",
            ],
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 4,
                    },
                    end: Position {
                        line: 3,
                        character: 6,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 4,
                    },
                    end: Position {
                        line: 3,
                        character: 6,
                    },
                },
                uri: Uri(
                    Uri {
                        scheme: "file",
                        authority: Some(
                            Authority {
                                userinfo: None,
                                host: "",
                                host_parsed: RegName(
                                    "",
                                ),
                                port: None,
                            },
                        ),
                        path: "/x.zeek",
                        query: None,
                        fragment: None,
                    },
                ),
            },
        ),
        documentation: "```zeek\n# In x::X\nf1: count &optional;\n```",
    },
)
