src/snapshots/zeek_language_server__ast__test__resolve.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: String(
            u!("x"),
        ),
        id: u!("c"),
        fqid: u!("x::c"),
        kind: Global,
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 10,
                        character: 0,
                    },
                    end: Position {
                        line: 10,
                        character: 16,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 10,
                        character: 7,
                    },
                    end: Position {
                        line: 10,
                        character: 8,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal c: count;\n```"),
    },
)
