src/snapshots/zeek_language_server__ast__test__resolve_builtin_implicit.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: Global,
        id: u!("count"),
        fqid: u!("count"),
        kind: Builtin(
            Count,
        ),
        is_export: None,
        loc: None,
        documentation: u!("Builtin type 'count'"),
    },
)
