src/snapshots/zeek_language_server__ast__test__resolve_elsewhere.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: String(
            u!("x"),
        ),
        id: u!("x"),
        fqid: u!("x::x"),
        kind: Global,
        is_export: Some(
            true,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 16,
                    },
                    end: Position {
                        line: 3,
                        character: 28,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 23,
                    },
                    end: Position {
                        line: 3,
                        character: 24,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal x: X;\n```"),
    },
)
