src/snapshots/zeek_language_server__ast__test__resolve_initializer.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: None,
        id: u!("f"),
        fqid: u!("x::X::f"),
        kind: Field(
            [
                u!("&optional"),
            ],
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 17,
                    },
                    end: Position {
                        line: 1,
                        character: 18,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 17,
                    },
                    end: Position {
                        line: 1,
                        character: 18,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\n# In x::X\nf: count &optional;\n```"),
    },
)
