src/snapshots/zeek_language_server__ast__test__resolve_record_type.snap
---
source: src/ast.rs
expression: "db.resolve(NodeLocation::from_node(uri.clone(), a)).and_then(|d| db.typ(d))"
---
Some(
    Decl {
        module: Global,
        id: "count",
        fqid: "count",
        kind: Builtin(
            Count,
        ),
        is_export: None,
        loc: None,
        documentation: "Builtin type 'count'",
    },
)
