src/snapshots/zeek_language_server__ast__test__resolve_redef.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, x2))"
---
Some(
    Decl {
        module: None,
        id: u!("x2"),
        fqid: u!("x::X::x2"),
        kind: Field(
            [],
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 2,
                        character: 23,
                    },
                    end: Position {
                        line: 2,
                        character: 25,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 2,
                        character: 23,
                    },
                    end: Position {
                        line: 2,
                        character: 25,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\n# In x::X\nx2: count;\n```"),
    },
)
