src/snapshots/zeek_language_server__ast__test__resolve_ref.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: None,
        id: u!("x"),
        fqid: u!("x"),
        kind: Global,
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 0,
                        character: 0,
                    },
                    end: Position {
                        line: 0,
                        character: 15,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 0,
                        character: 7,
                    },
                    end: Position {
                        line: 0,
                        character: 8,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal x = 123;\n```"),
    },
)
